--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,12 +1,10 @@
-$font-base: "Work Sans", sans-serif;
-$font-roboto: "Roboto", sans-serif;
-$font-size-base: 1.6rem;
-$font-size-small: 1.4rem;
-$font-size-big: 1.8rem;
-$font-size-h1: 2.5rem;
-$font-size-h2: 3rem;
-$font-size-h3: 2rem;
-$font-size-h4: 3.8rem;
+$font-base: "Nunito", sans-serif;
+$font-size-base: 2rem;
+$font-size-small: 1.6rem;
+$font-size-big: 3.1rem;
+$font-size-h1: 3rem;
+$font-size-h2: 2.1rem;
+$font-size-h3: 2.6rem;
 
 $primary-color: #006792; // black
 $secondary-color: #F1F2ED; // blue
