--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -156,12 +156,12 @@ ul {
 
 ::-moz-selection {
   color: white;
-  background-color: var.$primary-color;
+  background-color: var.$red_500;
 }
 
 ::selection {
   color: white;
-  background-color: var.$primary-color;
+  background-color: var.$red_500;
 }
 
 /* Set font-family, base font-size and line-height */
