--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -6,6 +6,16 @@ header {
     align-items: center;
     margin-left: 3em;
     margin-top: 0.6em;
+    margin-bottom: 0.6em;
+
+    @include var.breakpoint(1056px) {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        
+        .logo {
+            grid-column: 1;
+        }
+    }
 }
 
 #menu-main-menu {
@@ -13,6 +23,18 @@ header {
     justify-content: center;
     align-items: center;
     gap: 5em;
+
+    @include var.breakpoint(1400px) {
+        gap: 3em;
+    }
+
+    @include var.breakpoint(1240px) {
+        gap: 2em;
+    }
+
+    @include var.breakpoint(1160px) {
+        gap: 0.7em;
+    }
 
     a {
         color: var.$black_700;
@@ -57,11 +79,23 @@ header {
     padding-block: 0.7em;
     padding-inline: 1em;
     color: var.$white_700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
 
     &::before {
         content: "";
-        background: url('../images/phone.svg') no-repeat center;
+        background: url('../img/phone.svg') no-repeat center;
+        background-size: contain;
         width: 24px;
         height: 24px;
+        margin-right: 0.6em;
+    }
+
+    @include var.breakpoint(1056px) {
+        grid-column: 2;
+        border-radius: 50px;
     }
 }
