--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -53,6 +53,7 @@ header {
         text-decoration: none;
         font-weight: 300;
         font-size: 2.1rem;
+        text-transform: uppercase;
 
         &::before {
             content: "/";
