--- a/sass/components/_contact-form.scss
+++ b/sass/components/_contact-form.scss
@@ -1,5 +1,97 @@
-@use '../abstracts' as var;
+@use "../abstracts" as var;
 
-.contact-form {
+#contact-page {
+  .contact-form {
     margin-top: 2.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  form {
+    display: flex;
+    gap: 1em;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  label,
+  .particulier-societe {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.9rem;
+    font-weight: 400;
+    width: 100%;
+
+    .wpcf7-form-control-wrap {
+      width: 100%;
+    }
+  }
+  .particulier-societe {
+    justify-content: flex-start;
+    align-items: start;
+
+    label {
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      input {
+        width: 19px;
+        height: 19px;
+        margin-right: 0.5em;
+      }
+    }
+  }
+
+  input,
+  textarea {
+    width: 100%;
+    accent-color: var.$red_500;
+    padding: 0.8em;
+  }
+
+  input:focus,
+  textarea:focus {
+    outline-color: var.$red_500;
+  }
+
+  #consent {
+    font-size: 1.6rem;
+    font-style: italic;
+    color: #7b7b7b;
+
+    input {
+      width: fit-content;
+      width: -moz-fit-content;
+    }
+    label {
+      max-width: 615px;
+      flex-direction: row;
+      gap: 0.2em;
+      justify-content: flex-start;
+      align-items: start;
+    }
+  }
+
+  input[type="submit"] {
+    width: fit-content;
+    width: -moz-fit-content;
+  }
+
+  .label {
+    position: relative;
+    width: 100%;
+    text-align: left;
+    z-index: 1;
+    transform: translate(17px, 45px);
+    transition: all 0.5s ease-in-out;
+
+    &.active {
+      transform: translate(17px, 0) !important;
+    }
+  }
 }
