--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,124 +1,124 @@
-@use '../abstracts' as var;
+@use "../abstracts" as var;
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 3em;
-    margin-top: 0.6em;
-    margin-bottom: 0.6em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 3em;
+  margin-top: 0.6em;
+  margin-bottom: 0.6em;
 
-    @include var.breakpoint(1056px) {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        
-        .logo {
-            grid-column: 1;
-        }
+  @include var.breakpoint(1056px) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    .logo {
+      grid-column: 1;
     }
+  }
 
-    @include var.breakpoint(742px) {
-        grid-template-columns: 0.25fr 0.5fr 0.25fr;
-    }
+  @include var.breakpoint(742px) {
+    grid-template-columns: 0.25fr 0.5fr 0.25fr;
+  }
 
-    @include var.breakpoint(459px) {
-        margin-left: 0.5em;
-    } 
+  @include var.breakpoint(459px) {
+    margin-left: 0.5em;
+  }
 
-    .background {
-        display: none;
-    }
+  .background {
+    display: none;
+  }
 }
 
 #menu-main-menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5em;
 
-    @include var.breakpoint(1400px) {
-        gap: 3em;
+  @include var.breakpoint(1400px) {
+    gap: 3em;
+  }
+
+  @include var.breakpoint(1240px) {
+    gap: 2em;
+  }
+
+  @include var.breakpoint(1160px) {
+    gap: 0.7em;
+  }
+
+  a {
+    color: var.$black_700;
+    text-decoration: none;
+    font-weight: 300;
+    font-size: 2.1rem;
+    text-transform: uppercase;
+
+    &::before {
+      content: "/";
+      color: var.$red_500;
+      font-weight: 700;
+      font-size: 2.1rem;
+      margin-right: 0.5em;
+      opacity: 0;
     }
 
-    @include var.breakpoint(1240px) {
-        gap: 2em;
+    &::after {
+      content: "/";
+      color: var.$red_500;
+      font-weight: 700;
+      font-size: 2.1rem;
+      margin-left: 0.5em;
+      opacity: 0;
     }
 
-    @include var.breakpoint(1160px) {
-        gap: 0.7em;
+    &:hover {
+      font-weight: 700;
+      color: var.$red_500;
+
+      &::before,
+      &::after {
+        opacity: 1;
+      }
     }
-
-    a {
-        color: var.$black_700;
-        text-decoration: none;
-        font-weight: 300;
-        font-size: 2.1rem;
-        text-transform: uppercase;
-
-        &::before {
-            content: "/";
-            color: var.$red_500;
-            font-weight: 700;
-            font-size: 2.1rem;
-            margin-right: 0.5em;
-            opacity: 0;
-        }
-
-        &::after {
-            content: "/";
-            color: var.$red_500;
-            font-weight: 700;
-            font-size: 2.1rem;
-            margin-left: 0.5em;
-            opacity: 0;
-        }
-
-        &:hover {
-            font-weight: 700;
-            color: var.$red_500;
-
-            &::before, &::after {
-                opacity: 1;
-            }
-
-        }
-    }
+  }
 }
 
 .phone {
-    background: var.$red_500;
-    font-size: 2rem;
-    font-weight: 400;
-    padding-block: 0.7em;
-    padding-inline: 1em;
-    color: var.$white_700;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
+  background: var.$red_500;
+  font-size: 2rem;
+  font-weight: 400;
+  padding-block: 0.7em;
+  padding-inline: 1em;
+  color: var.$white_700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
 
+  &::before {
+    content: "";
+    background: url("../img/phone.svg") no-repeat center;
+    background-size: contain;
+    width: 24px;
+    height: 24px;
+    margin-right: 0.6em;
+  }
+
+  @include var.breakpoint(1056px) {
+    grid-column: 2;
+    border-radius: 50px;
+  }
+
+  @include var.breakpoint(710px) {
     &::before {
-        content: "";
-        background: url('../img/phone.svg') no-repeat center;
-        background-size: contain;
-        width: 24px;
-        height: 24px;
-        margin-right: 0.6em;
+      display: none;
     }
+  }
 
-    @include var.breakpoint(1056px) {
-        grid-column: 2;
-        border-radius: 50px;
-    }
-
-    @include var.breakpoint(710px) {
-        &::before {
-            display: none;
-        }
-    }
-
-    @include var.breakpoint(409px) {
-        padding-inline: 0.5em;
-    }
+  @include var.breakpoint(409px) {
+    padding-inline: 0.5em;
+  }
 }
