--- a/sass/pages/_single.scss
+++ b/sass/pages/_single.scss
@@ -1,28 +1,269 @@
+@use "../abstracts" as var;
+
 .single {
+  .title__singe__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2em;
+    padding-bottom: 9em;
 
-    .title__singe__container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 2em;
-        padding-bottom: 9em;
+    background: url("../img/tache-vin.jpg");
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: 387px;
 
-        background: url('../img/tache-vin.jpg');
-        background-repeat: no-repeat;
-        background-position: bottom center;
-        background-size: 387px;
+    h1 {
+      text-align: center;
+    }
+  }
 
-        h1 {
-            text-align: center;
-        }
+  .hero-banner {
+    margin-top: 2.5em;
+    overflow: visible;
+    height: 100%;
+
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+
+      @include var.breakpoint(1161px) {
+	flex-direction: column; 
+      }
+    }
+  }
+
+  .image-container {
+    position: absolute;
+    left: -10%;
+    top: -24%;
+    border: 1px solid var.$white_700;
+    padding: 0.6em;
+
+    @include var.breakpoint(1701px) {
+	max-width: 40%;
     }
 
-    .hero-banner {
-
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    @include var.breakpoint(1447px) {
+	top: -10%;
     }
+
+    @include var.breakpoint(1265px) {
+	max-width: 47%;
+    }
+
+    @include var.breakpoint(1161px) {
+	position: initial;
+	max-width: 100%;
+    }
+  }
+
+  .hero-banner__texte {
+    width: 100%;
+  }
+
+  .texte-container {
+    background: var.$red_500;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    color: white;
+    text-align: center;
+    max-width: 1379px;
+    padding-right: 9em;
+    padding-block: 2.8em;
+
+    @include var.breakpoint(1161px) {
+	align-items: center;
+	padding-right: 0;
+    }
+
+    img {
+      margin-bottom: 2em;
+    }
+  }
+}
+
+.inner-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 54%;
+
+  @include var.breakpoint(791px) {
+	max-width: 90%;
+  }
+}
+
+.texte-container__content {
+  display: flex;
+  flex-direction: column;
+  gap: 4em;
+}
+
+.single .prix {
+  color: var.$red_500;
+  font-size: 2.4rem;
+  font-weight: 700;
+  margin-top: 1.2em;
+  padding-right: 9em;
+  display: flow-root;
+  text-align: right;
+  max-width: 1379px;
+  margin-inline: auto;
+  margin-bottom: 5.4rem;
+  margin-bottom: 2.2em;
+
+  @include var.breakpoint(1161px) {
+	padding-right: 0;
+	text-align: center;
+  }
+}
+
+.single article {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    margin-bottom: 6.5em;
+  }
+
+  .wp-block-columns {
+    grid-row: 1;
+    grid-column: 1 / 3;
+    position: relative;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 31.9rem;
+    margin-bottom: 16.7em;
+
+    @include var.breakpoint(1327px) {
+	flex-direction: column;	
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 1.7em;
+    }
+  }
+
+  .wp-block-column:first-of-type {
+    width: 100%;
+    position: relative;
+    z-index: 0;
+
+    @include var.breakpoint(1327px) {
+	width: fit-content;
+	width: -moz-fit-content;
+    }
+  }
+
+  .wp-block-column:nth-of-type(2) {
+    position: absolute;
+    z-index: 1;
+    bottom: -46%;
+    right: 17%;
+
+    @include var.breakpoint(1719px) {
+	right: 8%;
+    }
+
+    @include var.breakpoint(1509px) {
+	right: -2%;
+    }
+
+    @include var.breakpoint(1327px) {
+	position: initial;
+	right: unset;
+	bottom: unset;
+	margin-left: 0 !important;
+    }
+  }
+
+  h2 {
+    grid-row: 2;
+    font-size: 3.1rem;
+    font-weight: 900;
+    margin-bottom: 0.8em;
+
+    @include var.breakpoint(1327px) {
+	text-align: center;
+	grid-column: 1 / 3;
+    }
+  }
+
+  p {
+    grid-column: 1;
+    font-weight: 400;
+
+    @include var.breakpoint(1327px) {
+	grid-column: 1 /3;
+    }
+
+    &:not(:last-of-type) {
+      margin-bottom: 1.5em;
+    }
+  }
+}
+
+.post-loop {
+  margin-bottom: 4.1em;
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  h3 {
+    font-size: 2.3rem;
+    font-weight: 700;
+    color: var.$red_500;
+    grid-column: 2;
+
+    @include var.breakpoint(1327px) {
+	grid-column: 1 / 3;
+    }
+  }
+
+  a {
+    grid-column: 2;
+    font-size: 3.1rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    border-bottom: 1px solid var.$black_700;
+    padding-bottom: 0.4em;
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+    color: var.$black_700;
+
+    @include var.breakpoint(1327px) {
+	grid-column: 1 / 3;
+    }
+
+    &:hover {
+      color: var.$red_500;
+    }
+
+    &:not(:last-of-type) {
+      margin-bottom: 0.4em;
+    }
+
+    &:last-of-type {
+      margin-bottom: 8.15rem;
+      margin-bottom: 2.5em;
+    }
+
+    &::after {
+      content: "+";
+      margin-left: 7.5em;
+
+      @include var.breakpoint(724px) {
+	margin-left: 0;
+      }
+    }
+  }
 }
