--- a/sass/components/_header-front.scss
+++ b/sass/components/_header-front.scss
@@ -4,6 +4,11 @@
   flex-direction: column;
   margin-top: 0;
   margin-left: 0;
+
+
+  @include var.breakpoint(1056px) {
+	display: flex;
+  }
 }
 
 .nav-front-container {
@@ -12,6 +17,17 @@
   align-items: center;
   gap: 6em;
   width: 90%;
+  padding-block: 0.5em;
+
+  @include var.breakpoint(1056px) {
+	justify-content: space-between;
+	gap: 0;
+	width: 100%;
+
+	 a img {
+	    margin-left: 1em;
+	}
+  }
 }
 
 .accueil-banner {
@@ -97,6 +113,10 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
 
+  @include var.breakpoint(1454px) {
+	grid-template-columns: repeat(2, 1fr)
+  }
+
   .hero-accueil-image {
     position: absolute;
     inset: 0;
@@ -118,6 +138,10 @@
     align-self: start;
     justify-self: end;
     margin-top: 2em;
+
+    @include var.breakpoint(1454px) {
+	grid-column: 2;
+    }
   }
 
   h1 {
@@ -139,91 +163,4 @@
   }
 }
 
-.particulier-front .container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    justify-items: center;
-    gap: 3em;
-}
 
-.particulier-front__left {
-  position: relative;
-}
-
-.particulier-front__title {
-  color: var.$white_700;
-  background: var.$red_500;
-  font-size: 2.1rem;
-  font-weight: 700;
-  position: absolute;
-  text-transform: uppercase;
-  padding: 0.9em 1.2em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  bottom: 0;
-  height: fit-content;
-  width: fit-content;
-  right: -25%;
-  transform: rotate(-90deg);
-  margin-block: auto;
-
-  &::after,
-  &::before {
-    content: "/";
-    margin-right: 0.2em;
-  }
-
-  &::after {
-    margin-right: 0;
-    margin-left: 0.2em;
-  }
-}
-
-.particulier-front__right {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: start;
-
-    h3 {
-        font-size: 2.1rem;
-        font-weight: 300;
-        text-transform: uppercase;
-        margin-bottom: 2.2em;
-        text-align: left;
-    }
-}
-
-.particulier-front__loop {
-    width: 100%;
-}
-
-.loop__link {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    font-size: 3.1rem;
-    font-weight: 900;
-    text-transform: uppercase;
-    color: var.$black_700;
-    text-decoration: none;
-    border-bottom: 1px solid var.$black_700;
-    padding-bottom: 0.4em;
-
-    &::after {
-        content: '+';
-    }
-
-    &:not(:last-of-type) {
-        margin-bottom: 0.4em;
-    }
-
-    &:hover {
-        color: var.$red_500;
-        border-bottom-color: var.$red_500;
-    }
-}
