--- a/sass/components/_header-front.scss
+++ b/sass/components/_header-front.scss
@@ -9,6 +9,12 @@
   @include var.breakpoint(1056px) {
 	display: flex;
   }
+
+  @include var.breakpoint(469px) {
+    .logo-blanc {
+      margin-top: 3em;
+    }
+  }
 }
 
 .nav-front-container {
@@ -35,6 +41,12 @@
   grid-template-columns: repeat(2, 1fr);
   height: 1070px;
 
+  @include var.breakpoint(784px) {
+    grid-template-columns: 1fr;
+    width: 100%;
+    height: 100%;
+  }
+
   &__red-bg {
     background: var.$red_500;
     width: 100%;
@@ -44,6 +56,10 @@
     flex-direction: column;
     justify-content: end;
     align-items: center;
+
+    @include var.breakpoint(388px) {
+        padding-block: 4em;
+    }
 
     strong {
       position: absolute;
@@ -81,6 +97,10 @@
         right: 0;
         margin-block: auto;
         transform: rotate(-90deg);
+
+        @include var.breakpoint(401px) {
+          right: -3%;
+        }
       }
 
       &:nth-of-type(3) {
@@ -96,7 +116,21 @@
         left: -4%;
         margin-block: auto;
         transform: rotate(90deg);
+
+        @include var.breakpoint(548px) {
+            left: -12%;
+        }
+
+        @include var.breakpoint(401px) {
+          left: -17%;
+        }
       }
+    }
+  }
+
+  @include var.breakpoint(369px) {
+    &__red-bg picture {
+      max-width: 60%;
     }
   }
 
@@ -115,6 +149,10 @@
 
   @include var.breakpoint(1454px) {
 	grid-template-columns: repeat(2, 1fr)
+  }
+
+  @include var.breakpoint(970px) {
+      grid-template-columns: 1fr;
   }
 
   .hero-accueil-image {
@@ -141,6 +179,9 @@
 
     @include var.breakpoint(1454px) {
 	grid-column: 2;
+    }
+    @include var.breakpoint(970px) {
+        grid-column: 1;
     }
   }
 
