--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,3 +7,13 @@
 body.home {
     display: block;
 }
+
+body {
+    max-width: 1920px !important;
+    margin-inline: auto !important;
+}
+
+main {
+    max-width: 1920px !important;
+    margin-inline: auto !important;
+}
