--- a/sass/pages/_single.scss
+++ b/sass/pages/_single.scss
@@ -61,7 +61,8 @@
   }
 
   .hero-banner__texte {
-    width: 100%;
+    width: fit-content;
+    width: -moz-fit-content;
   }
 
   .texte-container {
